--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,13 @@
+<IfModule mod_expires.c>
+ExpiresActive On
+ExpiresByType image/gif A31536000
+ExpiresByType image/jpg A31536000
+ExpiresByType image/jpeg A31536000
+ExpiresByType image/png A31536000
+ExpiresByType image/bmp A31536000
+ExpiresByType text/css A31536000
+ExpiresByType text/javascript A31536000
+ExpiresByType application/javascript A31536000
+ExpiresByType application/x-javascript A31536000
+</IfModule>
 
