--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,11 @@
       "src": "/images/favicon.png",
       "type": "image/png",
       "sizes": "32x32"
+    },
+    {
+      "src": "/images/favicon.png",
+      "type": "image/png",
+      "sizes": "32x32"
     }
   ],
   "start_url": "https://www.taxmygig.com",
