--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,12 @@
 {
   "short_name": "Tax My Gig",
   "name": "Tax My Gig",
-  "icons": [
-    {
-      "src": "/images/favicon.png",
-      "type": "image/png",
-      "sizes": "32x32"
-    }
-  ],
+  "browser_action":{
+    "default_icon": "/images/favicon.png"
+    },
   "start_url": "https://www.taxmygig.com",
   "background_color": "#fff",
   "display": "standalone",
   "scope": "{{site.url}}/variables",
-  "theme_color": "#000",
-
+  "theme_color": "#000"
 }
