--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Tax My Gig
 
 # Short bio or description (displayed in the header)
-tagline: The Self Employment Tax Calculator for 2021
+tagline: The Freelance Tax Calculator for 2021
 
 description: Tax My Gig's 2021 self employment tax calculator calculates your self employment tax, federal tax, and state tax. 
 
