--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ name: Tax My Gig
 # Short bio or description (displayed in the header)
 tagline: The Freelance Tax Calculator for 2021
 
-description: Tax My Gig's 2021 self employment tax calculator calculates your self employment tax, federal tax, and state tax. 
+description: Tax My Gig's 2021 freelance tax calculator calculates your self employment tax, federal tax, and state tax. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
