--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Tax My Gig
 
 # Short bio or description (displayed in the header)
-tagline: Self-Employment Tax Calculator
+tagline: Self Employment Tax Calculator
 
 description: Tax My Gig's tax calculator calculates your self employment tax, federal tax, and state tax. 
 
